removes margin collapsing issue by removing height rule on content class of home stylesheet

--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -7,8 +7,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 150px;
-  margin-top: 70px;
+  margin: 70px 10px 0 10px;
 
   p {
     max-width: 750px;
