--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -35,7 +35,7 @@ footer {
   align-items: center;
   background-color: black;
   justify-content: center;
-  margin-top: 130px;
+  margin-top: 70px;
 
   color: white;
 }
@@ -94,6 +94,7 @@ a:hover {
   display: flex;
   flex-direction: column;
   width: 750px;
+  margin: 0 10px 0 10px;
 
   p {
     text-align: right;
